2013-01-16  Sam Weinig  <sam@webkit.org>

        Update Owners file.

        * Owners:

2013-01-16  Sam Weinig  <sam@webkit.org>

        Remove unused AddLoadInProgress message
        https://bugs.webkit.org/show_bug.cgi?id=107077

        Reviewed by Dan Bernstein.

        Dead code is dead.

        * NetworkProcess/NetworkConnectionToWebProcess.cpp:
        * NetworkProcess/NetworkConnectionToWebProcess.h:
        * NetworkProcess/NetworkConnectionToWebProcess.messages.in:

2013-01-16  Anders Carlsson  <andersca@apple.com>

        Fix crash when destroying a plug-in with pending URL requests
        https://bugs.webkit.org/show_bug.cgi?id=107075
        <rdar://problem/12513871>

        Reviewed by Sam Weinig.

        In PluginView::destroyPluginAndReset, make sure to cancel any outstanding URL requests since the PluginView
        object will stay around and would otherwise start loading URLs from stopped plug-ins.

        * WebProcess/Plugins/PluginView.cpp:
        (WebKit::PluginView::Stream::start):
        Assert that the plug-in is alive.
        
        (WebKit::PluginView::destroyPluginAndReset):
        Empty out the pending URL requests vector and stop the timer.

2013-01-16  Jaehun Lim  <ljaehun.lim@samsung.com>

        [EFL][WK2] PageUIClientEfl should keep in sync with WKPageUIClient
        https://bugs.webkit.org/show_bug.cgi?id=107060

        Reviewed by Benjamin Poulain.

        Rearrange the order of functions in PageUIClientEfl.
        Rename closePage() to close().

        * UIProcess/API/efl/EwkViewImpl.cpp:
        (EwkViewImpl::close):
        * UIProcess/API/efl/EwkViewImpl.h:
        (EwkViewImpl):
        * UIProcess/efl/PageUIClientEfl.cpp:
        (WebKit::PageUIClientEfl::PageUIClientEfl):
        (WebKit::PageUIClientEfl::close):
        (WebKit::PageUIClientEfl::takeFocus):
        (WebKit::PageUIClientEfl::focus):
        (WebKit::PageUIClientEfl::unfocus):
        (WebKit::PageUIClientEfl::getWindowFrame):